--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -42,7 +42,9 @@ ray_cc_library(
         ":lease_dependency_manager",
         ":worker",
         ":worker_pool",
+        "//src/ray/common:cluster_resource_data",
         "//src/ray/common:lease",
+        "//src/ray/common:placement_group_util",
         "//src/ray/common:ray_object",
         "//src/ray/object_manager:object_manager_common",
         "//src/ray/raylet/scheduling:cluster_resource_scheduler",
