--- a/src/ray/gcs/gcs_client/BUILD.bazel
+++ b/src/ray/gcs/gcs_client/BUILD.bazel
@@ -13,6 +13,7 @@ ray_cc_library(
     deps = [
         "//src/ray/common:asio",
         "//src/ray/common:id",
+        "//src/ray/common:placement_group",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/gcs/pubsub:gcs_pub_sub_lib",
         "//src/ray/gcs/store_client:redis_store_client",
