--- a/src/ray/gcs/gcs_server/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/BUILD.bazel
@@ -267,6 +267,7 @@ ray_cc_library(
     srcs = ["gcs_placement_group.cc"],
     hdrs = ["gcs_placement_group.h"],
     deps = [
+        "//src/ray/common:bundle_spec",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
         "//src/ray/protobuf:gcs_service_cc_proto",
@@ -366,6 +367,7 @@ ray_cc_library(
         "//src/ray/util:logging",
     ],
     deps = [
+        "//src/ray/common:cluster_resource_data",
         "//src/ray/common:id",
         "//src/ray/common:lease",
         "//src/ray/common:task_common",
