--- a/src/ray/raylet/scheduling/BUILD.bazel
+++ b/src/ray/raylet/scheduling/BUILD.bazel
@@ -33,6 +33,7 @@ ray_cc_library(
     name = "scheduler_internal",
     hdrs = ["internal.h"],
     deps = [
+        "//src/ray/common:cluster_resource_data",
         "//src/ray/common:lease",
         "//src/ray/common:ray_object",
         "//src/ray/protobuf:node_manager_cc_proto",
@@ -45,6 +46,8 @@ ray_cc_library(
     hdrs = ["cluster_resource_manager.h"],
     deps = [
         ":local_resource_manager",
+        "//src/ray/common:bundle_location_index",
+        "//src/ray/common:cluster_resource_data",
         "//src/ray/common:grpc_util",
         "//src/ray/common:lease",
         "//src/ray/common:ray_config",
@@ -120,8 +123,11 @@ ray_cc_library(
     srcs = ["local_resource_manager.cc"],
     hdrs = ["local_resource_manager.h"],
     deps = [
+        "//src/ray/common:bundle_spec",
+        "//src/ray/common:cluster_resource_data",
         "//src/ray/common:grpc_util",
         "//src/ray/common:lease",
+        "//src/ray/common:placement_group_util",
         "//src/ray/common:ray_config",
         "//src/ray/common:ray_syncer",
         "//src/ray/protobuf:gcs_cc_proto",
@@ -159,6 +165,7 @@ ray_cc_library(
     name = "scheduling_context",
     hdrs = ["policy/scheduling_context.h"],
     deps = [
+        "//src/ray/common:bundle_location_index",
         "//src/ray/common:id",
         "//src/ray/common:lease",
         "@com_google_absl//absl/container:flat_hash_map",
@@ -171,6 +178,7 @@ ray_cc_library(
     hdrs = ["policy/affinity_with_bundle_scheduling_policy.h"],
     deps = [
         ":scheduling_policy",
+        "//src/ray/common:bundle_location_index",
         "//src/ray/common:lease",
     ],
 )
@@ -258,7 +266,10 @@ ray_cc_library(
     name = "scorer",
     srcs = ["policy/scorer.cc"],
     hdrs = ["policy/scorer.h"],
-    deps = ["//src/ray/common:lease"],
+    deps = [
+        "//src/ray/common:cluster_resource_data",
+        "//src/ray/common:lease",
+    ],
 )
 
 ray_cc_library(
@@ -266,6 +277,7 @@ ray_cc_library(
     hdrs = ["policy/scheduling_policy.h"],
     deps = [
         ":scheduling_options",
+        "//src/ray/common:cluster_resource_data",
         "//src/ray/common:lease",
     ],
 )
