MAINT: Ignore python/ray/air/__init__.py in ruff checks
Signed-off-by: Gagandeep Singh <gdp.1807@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ afterray = ["psutil", "setproctitle"]
 "doc/*" = ["I"]
 "python/ray/__init__.py" = ["I"]
 "python/ray/dag/__init__.py" = ["I"]
+"python/ray/air/__init__.py" = ["I"]
 "rllib/*" = ["I"]
 "release/*" = ["I"]
 
