--- a/src/ray/core_worker/tests/BUILD.bazel
+++ b/src/ray/core_worker/tests/BUILD.bazel
@@ -247,6 +247,7 @@ ray_cc_test(
     deps = [
         "//:ray_fakes",
         "//:ray_mock",
+        "//src/fakes/ray/object_manager/plasma:fake_plasma_client",
         "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:core_worker_lib",
