--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -118,6 +118,9 @@ ray_cc_library(
             "src/mock/ray/common/ray_syncer/ray_syncer.h",
         ],
     ),
+    deps = [
+        "//src/ray/observability:fake_ray_event_recorder",
+    ],
 )
 
 ray_cc_library(
@@ -127,9 +130,6 @@ ray_cc_library(
     # in the subdirectory and exclude it here.
     hdrs = glob(
         ["src/fakes/**/*.h"],
-        exclude = [
-            "src/fake/ray/observability/ray_event_recorder.h",
-        ],
     ),
     deps = [
         "//src/ray/common:asio",
