updating llm examples
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/ci/raydepsets/llmexamples.depsets.yaml
+++ b/ci/raydepsets/llmexamples.depsets.yaml
@@ -3,6 +3,14 @@ build_arg_sets:
     PYTHON_VERSION: py311
     CUDA_CODE: cu128
 
+common_settings: &common_settings
+  override_flags:
+    - --extra-index-url https://download.pytorch.org/whl/${CUDA_CODE}
+  append_flags:
+    - --python-version=3.11
+    - --python-platform=linux
+  build_arg_sets:
+    - cu128
 
 depsets:
 ########## LLM EXAMPLES ##########
@@ -14,13 +22,8 @@ depsets:
     requirements:
       - python/requirements.txt
     output: python/deplocks/llm/llm_subset_${PYTHON_VERSION}_${CUDA_CODE}.lock
-    override_flags:
-      - --extra-index-url https://download.pytorch.org/whl/${CUDA_CODE}
-    append_flags:
-      - --python-version=3.11
-      - --python-platform=linux
-    build_arg_sets:
-      - cu128
+    <<: *common_settings
+
 
 # Entity recognition with LLMs example depset - expanded from subset of RayLLM dependencies.
   - name: entity_recognition_with_llms_${PYTHON_VERSION}_${CUDA_CODE}
@@ -30,10 +33,4 @@ depsets:
     requirements:
       - doc/source/ray-overview/examples/entity-recognition-with-llms/requirements.txt
     output: doc/source/ray-overview/examples/entity-recognition-with-llms/llm_example_${PYTHON_VERSION}_${CUDA_CODE}.lock
-    override_flags:
-      - --extra-index-url https://download.pytorch.org/whl/${CUDA_CODE}
-    append_flags:
-      - --python-version=3.11
-      - --python-platform=linux
-    build_arg_sets:
-      - cu128
+    <<: *common_settings
