--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -285,6 +285,7 @@ ray_cc_binary(
         "//src/ray/common:status",
         "//src/ray/common/cgroup2:cgroup_manager",
         "//src/ray/common/cgroup2:sysfs_cgroup_driver",
+        "//src/ray/core_worker:metrics",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
         "//src/ray/object_manager:ownership_object_directory",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
