--- a/src/ray/common/BUILD.bazel
+++ b/src/ray/common/BUILD.bazel
@@ -151,82 +151,6 @@ ray_cc_library(
 )
 
 ray_cc_library(
-    name = "scheduling_ids",
-    srcs = ["scheduling/scheduling_ids.cc"],
-    hdrs = ["scheduling/scheduling_ids.h"],
-    deps = [
-        ":constants",
-        ":ray_config",
-        "//src/ray/util:logging",
-        "@boost//:algorithm",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/container:flat_hash_set",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/synchronization",
-    ],
-)
-
-ray_cc_library(
-    name = "label_selector",
-    srcs = ["scheduling/label_selector.cc"],
-    hdrs = ["scheduling/label_selector.h"],
-    deps = [
-        "//src/ray/protobuf:common_cc_proto",
-        "@com_google_absl//absl/container:flat_hash_set",
-        "@com_google_absl//absl/strings",
-        "@com_google_protobuf//:protobuf",
-    ],
-)
-
-ray_cc_library(
-    name = "fixed_point",
-    srcs = ["scheduling/fixed_point.cc"],
-    hdrs = ["scheduling/fixed_point.h"],
-    deps = [
-        ":constants",
-    ],
-)
-
-ray_cc_library(
-    name = "placement_group_util",
-    srcs = ["scheduling/placement_group_util.cc"],
-    hdrs = ["scheduling/placement_group_util.h"],
-    deps = [
-        ":scheduling_ids",
-        "//src/ray/util:logging",
-    ],
-)
-
-ray_cc_library(
-    name = "resource_set",
-    srcs = ["scheduling/resource_set.cc"],
-    hdrs = ["scheduling/resource_set.h"],
-    deps = [
-        ":fixed_point",
-        ":scheduling_ids",
-        "@boost//:range",
-        "@com_google_absl//absl/container:flat_hash_map",
-    ],
-)
-
-ray_cc_library(
-    name = "cluster_resource_data",
-    srcs = ["scheduling/cluster_resource_data.cc"],
-    hdrs = ["scheduling/cluster_resource_data.h"],
-    deps = [
-        ":fixed_point",
-        ":label_selector",
-        ":resource_instance_set",
-        ":resource_set",
-        ":scheduling_ids",
-        "//src/ray/util:logging",
-        "@boost//:range",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/time",
-    ],
-)
-
-ray_cc_library(
     name = "bundle_spec",
     srcs = [
         "bundle_spec.cc",
@@ -235,12 +159,12 @@ ray_cc_library(
         "bundle_spec.h",
     ],
     deps = [
-        ":cluster_resource_data",
         ":grpc_util",
         ":id",
-        ":label_selector",
-        ":placement_group_util",
-        ":scheduling_ids",
+        "//src/ray/common/scheduling:cluster_resource_data",
+        "//src/ray/common/scheduling:label_selector",
+        "//src/ray/common/scheduling:placement_group_util",
+        "//src/ray/common/scheduling:scheduling_ids",
         "//src/ray/protobuf:common_cc_proto",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_protobuf//:protobuf",
@@ -277,39 +201,6 @@ ray_cc_library(
 )
 
 ray_cc_library(
-    name = "scheduling_class_util",
-    srcs = ["scheduling/scheduling_class_util.cc"],
-    hdrs = ["scheduling/scheduling_class_util.h"],
-    deps = [
-        ":function_descriptor",
-        ":label_selector",
-        ":resource_set",
-        ":runtime_env",
-        "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/util:logging",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/synchronization",
-        "@com_google_protobuf//:protobuf",
-    ],
-)
-
-ray_cc_library(
-    name = "resource_instance_set",
-    srcs = ["scheduling/resource_instance_set.cc"],
-    hdrs = ["scheduling/resource_instance_set.h"],
-    deps = [
-        ":fixed_point",
-        ":placement_group_util",
-        ":resource_set",
-        ":scheduling_ids",
-        "//src/ray/util:container_util",
-        "//src/ray/util:logging",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/strings",
-    ],
-)
-
-ray_cc_library(
     name = "bundle_location_index",
     srcs = ["bundle_location_index.cc"],
     hdrs = ["bundle_location_index.h"],
@@ -335,12 +226,12 @@ ray_cc_library(
         ":event_stats",
         ":function_descriptor",
         ":grpc_util",
-        ":label_selector",
         ":ray_config",
         ":ray_object",
-        ":resource_set",
         ":runtime_env",
-        ":scheduling_class_util",
+        "//src/ray/common/scheduling:label_selector",
+        "//src/ray/common/scheduling:resource_set",
+        "//src/ray/common/scheduling:scheduling_class_util",
         "//src/ray/flatbuffers:node_manager_generated",
         "//src/ray/util:container_util",
         "@com_google_absl//absl/container:flat_hash_map",
@@ -362,10 +253,10 @@ ray_cc_library(
     deps = [
         ":function_descriptor",
         ":id",
-        ":label_selector",
-        ":resource_set",
         ":runtime_env",
-        ":scheduling_class_util",
+        "//src/ray/common/scheduling:label_selector",
+        "//src/ray/common/scheduling:resource_set",
+        "//src/ray/common/scheduling:scheduling_class_util",
         "//src/ray/protobuf:common_cc_proto",
     ],
 )
