--- a/.buildkite/dependencies.rayci.yml
+++ b/.buildkite/dependencies.rayci.yml
@@ -2,11 +2,6 @@ group: dependencies
 depends_on:
   - forge
 steps:
-  # builds
-  - name: min-allpython
-    label: "wanda: min-allpython"
-    wanda: ci/docker/min.allpython.wanda.yaml
-
   # dependencies
   - label: ":tapioca: build: pip-compile dependencies"
     key: pip_compile_dependencies
@@ -29,5 +24,6 @@ steps:
     tags: always
     instance_type: small
     command: ./ci/test_compile_llm_requirements.sh
-    job_env: min-allpython
-    depends_on: min-allpython
+    job_env: manylinux
+    depends_on:
+      - manylinux
