Addressing failing cpp tests
Signed-off-by: joshlee <joshlee@anyscale.com>

--- a/src/fakes/ray/rpc/raylet/BUILD.bazel
+++ b/src/fakes/ray/rpc/raylet/BUILD.bazel
@@ -4,6 +4,7 @@ ray_cc_library(
     name = "fake_raylet_client",
     hdrs = ["raylet_client.h"],
     deps = [
+        "//src/ray/common/scheduling:scheduling_ids",
         "//src/ray/rpc:raylet_client_interface",
     ],
 )
