--- a/src/ray/common/tests/BUILD.bazel
+++ b/src/ray/common/tests/BUILD.bazel
@@ -93,6 +93,7 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//src/ray/common:task_common",
+        "//src/ray/common/scheduling:scheduling_class_util",
         "@com_google_googletest//:gtest_main",
     ],
 )
