--- a/.buildkite/dependencies.rayci.yml
+++ b/.buildkite/dependencies.rayci.yml
@@ -23,6 +23,9 @@ steps:
     key: raydepsets_compile_llm_dependencies
     tags: always
     instance_type: small
-    command: ./ci/test_compile_llm_requirements.sh
+    commands:
+      - ci/compile_llm_requirements.sh
+      - chown -R 2000:100 /artifact-mount
+      - cp python/deplocks/llm/* /artifact-mount/
     job_env: oss-ci-base_test-py3.11
     depends_on: oss-ci-base_test-multipy
