--- a/.buildkite/core.rayci.yml
+++ b/.buildkite/core.rayci.yml
@@ -297,7 +297,7 @@ steps:
     instance_type: medium
     commands:
       - bazel run //ci/ray_ci:test_in_docker -- //:all //src/ray/common/cgroup2/tests/... core --build-type clang --cache-test-results
-      - RAYCI_DISABLE_TEST_DB=1  bazel run //ci/ray_ci:test_in_docker -- //:all //src/ray/common/cgroup2/tests/resource_isolation/... core --privileged --cache-test-results
+      - bazel run //ci/ray_ci:test_in_docker -- //:all //python/ray/test/resource_isolation/... core --privileged --cache-test-results
       - docker run --privileged -i --rm --volume /tmp/artifacts:/artifact-mount --shm-size=2.5gb
         "$${RAYCI_WORK_REPO}":"$${RAYCI_BUILD_ID}"-corebuild /bin/bash
         "./src/ray/common/cgroup2/integration_tests/sysfs_cgroup_driver_integration_test_entrypoint.sh"
