--- a/python/ray/_common/tests/BUILD.bazel
+++ b/python/ray/_common/tests/BUILD.bazel
@@ -15,6 +15,8 @@ py_test_module_list(
     size = "small",
     files = [
         "test_deprecation.py",
+        "test_filters.py",
+        "test_formatters.py",
         "test_network_utils.py",
         "test_ray_option_utils.py",
         "test_signal_semaphore_utils.py",
@@ -27,6 +29,7 @@ py_test_module_list(
         "team:core",
     ],
     deps = [
+        ":conftest",
         "//:ray_lib",
     ],
 )
