[core] [actor-event-01] Actor event: add proto schema (#56221)
Add proto schema for actor events. This contains all the field and not
more from the existing
https://github.com/ray-project/ray/blob/master/src/ray/protobuf/export_actor_data.proto.

It splits by the static vs dynamic state transition information, similar
to other one event schema designs.

Test:
- CI

---------

Signed-off-by: sampan <sampan@anyscale.com>
Co-authored-by: sampan <sampan@anyscale.com>

--- a/src/ray/protobuf/public/BUILD.bazel
+++ b/src/ray/protobuf/public/BUILD.bazel
@@ -7,6 +7,8 @@ proto_library(
     name = "events_base_event_proto",
     srcs = ["events_base_event.proto"],
     deps = [
+        ":events_actor_definition_event_proto",
+        ":events_actor_lifecycle_event_proto",
         ":events_actor_task_definition_event_proto",
         ":events_driver_job_definition_event_proto",
         ":events_driver_job_execution_event_proto",
@@ -95,6 +97,25 @@ cc_proto_library(
 )
 
 proto_library(
+    name = "events_actor_definition_event_proto",
+    srcs = ["events_actor_definition_event.proto"],
+)
+
+cc_proto_library(
+    name = "events_actor_definition_event_cc_proto",
+    deps = [":events_actor_definition_event_proto"],
+)
+
+proto_library(
+    name = "events_actor_lifecycle_event_proto",
+    srcs = ["events_actor_lifecycle_event.proto"],
+    deps = [
+        "//src/ray/protobuf:common_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+proto_library(
     name = "events_node_definition_event_proto",
     srcs = ["events_node_definition_event.proto"],
 )
@@ -110,6 +131,11 @@ proto_library(
     deps = [
         "@com_google_protobuf//:timestamp_proto",
     ],
+)
+
+cc_proto_library(
+    name = "events_actor_lifecycle_event_cc_proto",
+    deps = [":events_actor_lifecycle_event_proto"],
 )
 
 cc_proto_library(
