--- a/ci/ray_ci/oss_config.yaml
+++ b/ci/ray_ci/oss_config.yaml
@@ -8,9 +8,6 @@ release_byod:
   aws_cr: 029272617770.dkr.ecr.us-west-2.amazonaws.com
   gcp_cr: us-west1-docker.pkg.dev/anyscale-oss-ci
   aws2gce_credentials: release/aws2gce_iam.json
-  image_build_step: anyscalebuild
-  image_build_step_ml: anyscalemlbuild
-  image_build_step_llm: anyscalellmbuild
 ci_pipeline:
   premerge:
     - 0189942e-0876-4b8f-80a4-617f988ec59b  # premerge
@@ -26,3 +23,7 @@ state_machine:
     aws_bucket: ray-ci-pr-results
   branch:
     aws_bucket: ray-ci-results
+release_image_step:
+  ray: anyscalebuild
+  ray_ml: anyscalemlbuild
+  ray_llm: anyscalellmbuild
