--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,4 +1,4 @@
-# Bazel build
+# Bazel build test 
 # C/C++ documentation: https://docs.bazel.build/versions/master/be/c-cpp.html
 
 # ************************** IMPORTANT ***********************
