--- a/src/ray/gcs/gcs_server/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/BUILD.bazel
@@ -101,12 +101,10 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/common:ray_config",
         "//src/ray/common:ray_syncer",
-        "//src/ray/common:task_common",
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/protobuf:ray_syncer_cc_proto",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
         "//src/ray/raylet/scheduling:cluster_resource_manager",
-        "//src/ray/stats:stats_metric",
         "//src/ray/util:logging",
         "@com_google_absl//absl/container:flat_hash_map",
     ],
@@ -264,8 +262,8 @@ ray_cc_library(
     srcs = ["gcs_placement_group.cc"],
     hdrs = ["gcs_placement_group.h"],
     deps = [
+        "//src/ray/common:bundle_spec",
         "//src/ray/common:id",
-        "//src/ray/common:task_common",
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/stats:stats_lib",
         "//src/ray/util:counter_map",
@@ -283,7 +281,6 @@ ray_cc_library(
         ":gcs_table_storage",
         "//src/ray/common:asio",
         "//src/ray/common:id",
-        "//src/ray/common:task_common",
         "//src/ray/raylet/scheduling:cluster_resource_scheduler",
         "//src/ray/raylet/scheduling:scheduling_context",
         "//src/ray/rpc:raylet_client_interface",
@@ -298,19 +295,20 @@ ray_cc_library(
     hdrs = ["gcs_placement_group_manager.h"],
     deps = [
         ":gcs_init_data",
-        ":gcs_node_manager",
         ":gcs_placement_group",
         ":gcs_placement_group_scheduler",
         ":gcs_resource_manager",
         ":gcs_table_storage",
         ":gcs_usage_stats_client",
+        ":grpc_service_interfaces",
         "//src/ray/common:asio",
+        "//src/ray/common:bundle_spec",
         "//src/ray/common:id",
-        "//src/ray/common:task_common",
+        "//src/ray/common:ray_config",
         "//src/ray/protobuf:gcs_cc_proto",
+        "//src/ray/stats:stats_lib",
         "//src/ray/util:counter_map",
         "//src/ray/util:exponential_backoff",
-        "//src/ray/util:time",
         "@com_google_absl//absl/container:flat_hash_map",
     ],
 )
@@ -361,6 +359,7 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/common:lease",
         "//src/ray/common:task_common",
+        "//src/ray/common/scheduling:cluster_resource_data",
         "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/protobuf:export_event_cc_proto",
         "//src/ray/protobuf:gcs_service_cc_proto",
@@ -385,11 +384,10 @@ ray_cc_library(
         "//src/ray/common:asio",
         "//src/ray/common:id",
         "//src/ray/common:ray_config",
-        "//src/ray/common:task_common",
-        "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
         "//src/ray/rpc:core_worker_client",
         "//src/ray/rpc:raylet_client_interface",
+        "//src/ray/rpc:raylet_client_pool",
         "//src/ray/util:logging",
         "//src/ray/util:time",
         "@com_google_absl//absl/container:flat_hash_map",
