--- a/src/ray/raylet/scheduling/BUILD.bazel
+++ b/src/ray/raylet/scheduling/BUILD.bazel
@@ -34,7 +34,7 @@ ray_cc_library(
     hdrs = ["internal.h"],
     deps = [
         "//src/ray/common:lease",
-        "//src/ray/common:ray_object",
+        "//src/ray/common/scheduling:cluster_resource_data",
         "//src/ray/protobuf:node_manager_cc_proto",
     ],
 )
@@ -45,9 +45,11 @@ ray_cc_library(
     hdrs = ["cluster_resource_manager.h"],
     deps = [
         ":local_resource_manager",
+        "//src/ray/common:bundle_location_index",
         "//src/ray/common:grpc_util",
         "//src/ray/common:lease",
         "//src/ray/common:ray_config",
+        "//src/ray/common/scheduling:cluster_resource_data",
         "//src/ray/protobuf:gcs_cc_proto",
         "//src/ray/util:container_util",
         "//src/ray/util:logging",
@@ -89,7 +91,6 @@ ray_cc_library(
         ":scheduler_resource_reporter",
         "//src/ray/common:lease",
         "//src/ray/common:ray_config",
-        "//src/ray/common:ray_object",
         "//src/ray/stats:stats_lib",
         "//src/ray/util:logging",
         "@com_google_absl//absl/container:flat_hash_map",
@@ -110,7 +111,6 @@ ray_cc_library(
     hdrs = ["local_lease_manager_interface.h"],
     deps = [
         ":scheduler_internal",
-        "//src/ray/common:lease",
         "@com_google_absl//absl/container:flat_hash_map",
     ],
 )
@@ -120,10 +120,9 @@ ray_cc_library(
     srcs = ["local_resource_manager.cc"],
     hdrs = ["local_resource_manager.h"],
     deps = [
-        "//src/ray/common:grpc_util",
-        "//src/ray/common:lease",
-        "//src/ray/common:ray_config",
         "//src/ray/common:ray_syncer",
+        "//src/ray/common/scheduling:cluster_resource_data",
+        "//src/ray/common/scheduling:placement_group_util",
         "//src/ray/protobuf:gcs_cc_proto",
         "//src/ray/protobuf:node_manager_cc_proto",
         "//src/ray/stats:stats_metric",
@@ -140,7 +139,6 @@ ray_cc_library(
     deps = [
         ":local_lease_manager_interface",
         ":scheduler_internal",
-        "//src/ray/common:lease",
         "//src/ray/common:ray_config",
         "@com_google_absl//absl/container:flat_hash_map",
     ],
@@ -160,8 +158,7 @@ ray_cc_library(
     hdrs = ["policy/scheduling_context.h"],
     deps = [
         "//src/ray/common:id",
-        "//src/ray/common:lease",
-        "@com_google_absl//absl/container:flat_hash_map",
+        "//src/ray/common:placement_group",
     ],
 )
 
@@ -171,7 +168,7 @@ ray_cc_library(
     hdrs = ["policy/affinity_with_bundle_scheduling_policy.h"],
     deps = [
         ":scheduling_policy",
-        "//src/ray/common:lease",
+        "//src/ray/common:bundle_location_index",
     ],
 )
 
@@ -184,7 +181,6 @@ ray_cc_library(
         ":scheduling_context",
         ":scheduling_policy",
         ":scorer",
-        "//src/ray/common:lease",
     ],
 )
 
@@ -258,7 +254,9 @@ ray_cc_library(
     name = "scorer",
     srcs = ["policy/scorer.cc"],
     hdrs = ["policy/scorer.h"],
-    deps = ["//src/ray/common:lease"],
+    deps = [
+        "//src/ray/common/scheduling:cluster_resource_data",
+    ],
 )
 
 ray_cc_library(
@@ -266,6 +264,6 @@ ray_cc_library(
     hdrs = ["policy/scheduling_policy.h"],
     deps = [
         ":scheduling_options",
-        "//src/ray/common:lease",
+        "//src/ray/common/scheduling:cluster_resource_data",
     ],
 )
