generating lock file for e2e
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/docker/ray-llm/Dockerfile
+++ b/docker/ray-llm/Dockerfile
@@ -4,6 +4,7 @@ ARG BASE_IMAGE
 FROM "$BASE_IMAGE"
 
 COPY python/deplocks/llm/rayllm_*.lock ./
+COPY python/deplocks/examples/e2e_audio_py311_cu128.lock ./
 
 ARG KVER="5.15.0-139-generic"
 ARG ROOT_DIR="/usr/local"
