--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -291,6 +291,7 @@ ray_cc_binary(
         "//src/ray/rpc:metrics_agent_client",
         "//src/ray/rpc:raylet_client_lib",
         "//src/ray/rpc:raylet_client_pool",
+        "//src/ray/rpc/object_manager:object_manager_client",
         "//src/ray/stats:stats_lib",
         "//src/ray/util:cmd_line_utils",
         "//src/ray/util:event",
