--- a/src/ray/raylet/tests/BUILD.bazel
+++ b/src/ray/raylet/tests/BUILD.bazel
@@ -181,11 +181,11 @@ ray_cc_test(
         ":util",
         "//:ray_fakes",
         "//:ray_mock",
+        "//src/fakes/ray/object_manager/plasma:fake_plasma_client",
         "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/common:lease",
         "//src/ray/common:ray_object",
         "//src/ray/common:task_common",
-        "//src/ray/object_manager/plasma:plasma_client",
         "//src/ray/observability:fake_metric",
         "//src/ray/raylet:local_object_manager_interface",
         "//src/ray/raylet:node_manager",
