--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4643,7 +4643,7 @@
       pytest -sv test_batch_vllm.py
 
 - name: llm_batch_sglang_llama
-  frequency: manual # TODO(ray-llm): fix this test and re-enable it.
+  frequency: nightly
   python: "3.11"
   group: llm-batch
   team: llm
