add py tests bazel target
Signed-off-by: Sagar Sumit <sagarsumit09@gmail.com>

--- a/python/ray/tests/BUILD.bazel
+++ b/python/ray/tests/BUILD.bazel
@@ -351,6 +351,7 @@ py_test_module_list(
         "test_scheduling.py",
         "test_serialization.py",
         "test_shuffle.py",
+        "test_signal_e2e.py",
         "test_state_api_log.py",
         "test_streaming_generator.py",
         "test_streaming_generator_2.py",
@@ -361,6 +362,7 @@ py_test_module_list(
         "test_tempdir.py",
         "test_tls_auth.py",
         "test_traceback.py",
+        "test_unified_signal_handlers.py",
         "test_worker_capping.py",
         "test_worker_state.py",
     ],
