--- a/.buildkite/dependencies.rayci.yml
+++ b/.buildkite/dependencies.rayci.yml
@@ -35,6 +35,6 @@ steps:
       # build placeholder wheel for all python versions
       - bash ci/build/build-placeholder-wheel.sh
       # compile rayimg dependencies
-      - bazel run //ci/raydepsets:raydepsets -- build ci/raydepsets/rayimg.depsets.yaml
+      - bazel run //ci/raydepsets:raydepsets -- build ci/raydepsets/rayimg.depsets.yaml --check
     job_env: manylinux
     depends_on: manylinux
