--- a/.buildkite/windows.rayci.yml
+++ b/.buildkite/windows.rayci.yml
@@ -2,8 +2,8 @@ group: windows tests
 sort_key: "~windows"
 steps:
   # block on premerge and microcheck
-  - block: "run windows tests"
-    if: build.env("BUILDKITE_PIPELINE_ID") == "0189942e-0876-4b8f-80a4-617f988ec59b" || build.env("BUILDKITE_PIPELINE_ID") == "018f4f1e-1b73-4906-9802-92422e3badaa"
+  # - block: "run windows tests"
+  #   if: build.env("BUILDKITE_PIPELINE_ID") == "0189942e-0876-4b8f-80a4-617f988ec59b" || build.env("BUILDKITE_PIPELINE_ID") == "018f4f1e-1b73-4906-9802-92422e3badaa"
 
   - name: windowsbuild
     wanda: ci/docker/windows.build.wanda.yaml
@@ -70,7 +70,7 @@ steps:
     parallelism: 2
     commands:
       - bash ci/ray_ci/windows/install_tools.sh
-      - bazel run //ci/ray_ci:test_in_docker -- //python/ray/serve/... serve
+      - bazel run //ci/ray_ci:test_in_docker -- //python/ray/serve/tests:test_logging serve
         --build-name windowsbuild
         --operating-system windows
         --except-tags no_windows,use_all_core_windows
