--- a/src/ray/common/cgroup2/BUILD.bazel
+++ b/src/ray/common/cgroup2/BUILD.bazel
@@ -14,7 +14,7 @@ ray_cc_library(
     }),
     hdrs = [
         "cgroup_manager.h",
-        "scoped_cgroup_operation.h"
+        "scoped_cgroup_operation.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -57,10 +57,10 @@ ray_cc_library(
 
 ray_cc_library(
     name = "sysfs_cgroup_driver",
-     srcs = select({
+    srcs = select({
         ":is_linux": ["sysfs_cgroup_driver.cc"],
         "//conditions:default": ["noop_sysfs_cgroup_driver.cc"],
-    }),    
+    }),
     hdrs = [
         "sysfs_cgroup_driver.h",
     ],
@@ -74,8 +74,8 @@ ray_cc_library(
             "//src/ray/util:logging",
             "@com_google_absl//absl/strings",
         ],
-        "//conditions:default": [], 
-    })
+        "//conditions:default": [],
+    }),
 )
 
 # Private Targets.
