[deps] changing compile llm requirements image (#56172)
Using manylinux image with all python versions installed for llm
compilation
This will be used for raydepsets building

passing build here:
https://buildkite.com/ray-project/microcheck/builds/25418

---------

Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/.buildkite/dependencies.rayci.yml
+++ b/.buildkite/dependencies.rayci.yml
@@ -24,5 +24,6 @@ steps:
     tags: always
     instance_type: small
     command: ./ci/test_compile_llm_requirements.sh
-    job_env: oss-ci-base_test-py3.11
-    depends_on: oss-ci-base_test-multipy
+    job_env: manylinux
+    depends_on:
+      - manylinux
