removing python version check
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/.buildkite/dependencies.rayci.yml
+++ b/.buildkite/dependencies.rayci.yml
@@ -32,6 +32,7 @@ steps:
     tags: always
     instance_type: medium
     commands:
+      - which python
       # build placeholder wheel for all python versions
       - bash ci/build/build-placeholder-wheel.sh
       # compile rayimg dependencies
