uv pip sync in notebook
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/docker/ray-llm/Dockerfile
+++ b/docker/ray-llm/Dockerfile
@@ -5,7 +5,7 @@ FROM "$BASE_IMAGE"
 
 COPY python/deplocks/llm/rayllm_*.lock ./
 
-COPY python/deplocks/examples/entity_recognition_with_llms/llm_example_py311_cu128.lock ./
+COPY python/deplocks/examples/entity_recognition_with_llms/llm_example_py311_cu128.lock /home/ray/lock_file.lock
 
 ARG KVER="5.15.0-139-generic"
 ARG ROOT_DIR="/usr/local"
